help: use g_network_monitor_can_reach_async()

We cannot rely on g_network_monitor_get_available() being specific enough
to tell us if we can reach builder.readthedocs.io, so use the can-reach
async API instead.

https://bugzilla.gnome.org/show_bug.cgi?id=780035